feat: ajuste textos e imagem home

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -9,11 +9,10 @@
 <main class="main-content">
   <section class="hero-section">
     <div class="hero-content">
-      <h1 class="hero-title">Faça a diferença nas vidas de quem precisa muito de nossa ajuda!</h1>
+      <h1 class="hero-title">Para mudar o mundo todo é necessário começar mudando uma vida por vez!</h1>
       
       <p class="hero-description">
-        A ONG Ser Amor trabalha para transformar vidas e comunidades através de projetos sociais, atividades educacionais 
-        e parcerias estratégicas. Juntos, podemos fazer a diferença no mundo.
+        A OSC Ser Amor Promove desenvolvimento emocional, inclusão e proteção social para crianças típicas e atípicas em situação de vulnerabilidade em Itapevi.
       </p>
 
       <div class="hero-buttons">
@@ -34,6 +33,7 @@
               [src]="carouselImages[currentSlideIndex].src"
               [alt]="carouselImages[currentSlideIndex].alt"
               class="carousel-image"
+              [style.object-position]="currentSlideIndex === 2 ? 'top' : 'center'"
             />
           }
         </div>
