--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -175,14 +175,15 @@ nav.menu .menu-link {
   align-items: center;
   gap: 1rem;
   width: 100%;
-  max-width: 41.5rem;
+  max-width: 60rem;
+  position: relative;
 }
 
 .carousel-wrapper {
-  width: 41.5rem;
-  height: 28.5625rem;
-  border-top-left-radius: 1.25rem;
-  border-bottom-left-radius: 1.25rem;
+  width: 100%;
+  max-width: 60rem;
+  height: 37.5625rem;
+  border-radius: 1.25rem;
   overflow: hidden;
   background-color: #f0f0f0;
   display: flex;
@@ -193,8 +194,10 @@ nav.menu .menu-link {
 .carousel-image {
   width: 100%;
   height: 100%;
+  display: block;
   object-fit: cover;
   animation: fadeIn 0.5s ease-in-out;
+  object-position: center;
 }
 
 @keyframes fadeIn {
@@ -272,9 +275,9 @@ nav.menu .menu-link {
   }
 
   .carousel-wrapper {
-    width: 100%;
-    max-width: 31.25rem;
-    height: 21.875rem;
+     width: 100%;
+     max-width: 40rem;
+     height: 21.875rem;
   }
 
   .hero-title {
@@ -316,9 +319,9 @@ nav.menu .menu-link {
   }
 
   .carousel-wrapper {
-    width: 100%;
-    max-width: 100%;
-    height: 15.625rem;
+     width: 100%;
+     max-width: 100%;
+     height: 15.625rem;
   }
 
   .carousel-container {
