feat: ajuste quem somos

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -9,10 +9,10 @@
 <main class="main-content">
   <section class="hero-section">
     <div class="hero-content">
-      <h1 class="hero-title">Para mudar o mundo todo é necessário começar mudando uma vida por vez!</h1>
+      <h1 class="hero-title">Cada vida transformada é um passo para mudar o mundo.</h1>
       
       <p class="hero-description">
-        A OSC Ser Amor Promove desenvolvimento emocional, inclusão e proteção social para crianças típicas e atípicas em situação de vulnerabilidade em Itapevi.
+        A OSC Ser Amor promove desenvolvimento emocional, inclusão e proteção social para crianças típicas e atípicas em situação de vulnerabilidade em Itapevi.
       </p>
 
       <div class="hero-buttons">
