--- a/src/app/pages/quem-somos/quem-somos.component.css
+++ b/src/app/pages/quem-somos/quem-somos.component.css
@@ -33,9 +33,7 @@
 .image-block {
   flex: 0 0 36%;
   height: 12.5rem;
-  background-image: url('/carrossel/imagem1.png');
-  background-size: cover;
-  background-position: center;
+  border-radius: 1rem;
 }
 
 .history-title {
@@ -78,10 +76,12 @@
 
 .carousel-item img {
   width: 100%;
-  height: 20rem;
+  height: 100%;
   object-fit: cover;
   display: block;
   border-radius: 0.5rem;
+
+  object-fit: cover;
 }
 
 .carousel-btn {
@@ -102,15 +102,22 @@
   .top-row {
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
   }
 
   .text-block {
     flex: 1 1 100%;
+    width: 100%;
+    margin-bottom: 0.5rem;
   }
 
   .image-block {
-    flex: 0 0 100%;
-    height: 15rem;
+    flex: none;
+    width: 80vw;
+    max-width: 320px;
+    height: 10rem;
+    margin: 0 auto 1rem auto;
+    display: block;
   }
 
   .carousel-item {
