--- a/src/app/shared/components/section-carousel/section-carousel.component.css
+++ b/src/app/shared/components/section-carousel/section-carousel.component.css
@@ -43,7 +43,7 @@
 
 .carousel-item img {
   width: 100%;
-  height: 20rem;
+  height: 100%;
   object-fit: cover;
   display: block;
   border-radius: 0.5rem;
