feat: implementacao analytics

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -16,7 +16,7 @@
       </p>
 
       <div class="hero-buttons">
-        <button mat-raised-button color="primary">Doe Agora</button>
+        <button mat-raised-button color="primary" (click)="onDonateClick()">Doe Agora</button>
         <button mat-stroked-button>Saiba Mais</button>
       </div>
     </div>
