--- a/src/app/pages/quem-somos/quem-somos.component.css
+++ b/src/app/pages/quem-somos/quem-somos.component.css
@@ -1,6 +1,6 @@
 .cozinha-section {
   margin: 3rem 0 2rem 0;
-  padding: 0 1rem;
+  padding: 0;
   width: 100%;
 }
 .cozinha-title {
@@ -66,7 +66,7 @@
   letter-spacing: 0.0125rem;
   color: #E22327;
   text-align: center;
-  padding: 0 1rem 0 1rem;
+  padding: 0;
 }
 
 .top-row {
