--- a/src/app/pages/nos-apoie/nos-apoie.component.html
+++ b/src/app/pages/nos-apoie/nos-apoie.component.html
@@ -3,7 +3,9 @@
     <h2 class="nos-apoie-title">NOS APOIE</h2>
 
     <p class="nos-apoie-description">
-      Se você deseja ser um agente de mudanças na sociedade, contribuindo com organizações não governamentais que promovem ações sociais realmente transformadoras, colabore com a nossa causa e seja um doador da Ong Ser Amor, instituição de itapevi-SP.
+      Se você deseja ser um agente de mudanças na sociedade, contribuindo com organizações não governamentais que
+      promovem ações sociais realmente transformadoras, colabore com a nossa causa e seja um doador da Ong Ser Amor,
+      instituição de itapevi-SP.
     </p>
 
     <div class="pix-capsule">
@@ -12,13 +14,14 @@
 
         <div class="pix-info-wrapper">
           <div class="pix-details">
-            <p class="pix-label"><strong>Chave PIX:</strong> 42.429.908/0001-65</p>
             <p class="pix-label"><strong>Nome:</strong> Ong Ser Amor</p>
+            <p class="pix-label"><strong>Chave PIX:</strong> 42.429.908/0001-65</p>
             <p class="pix-label"><strong>Tipo de Chave:</strong> CNPJ</p>
+            <p class="pix-label"><strong>Banco:</strong> Efi S.A. - Instituição de Pagamento</p>
           </div>
 
           <div class="pix-images">
-            <img src="/public-assets/qrcode-placeholder.svg" alt="QR Code PIX" class="pix-qrcode" />
+            <img src="/public-assets/pix-ong.jpeg" alt="QR Code PIX" class="pix-qrcode" />
           </div>
         </div>
 
