--- a/src/app/pages/quem-somos/quem-somos.component.html
+++ b/src/app/pages/quem-somos/quem-somos.component.html
@@ -25,7 +25,7 @@
       <img class="image-block" src="/quem-somos/quem-somos.jpeg" alt="Imagem da ONG Ser Amor" />
     </div>
 
-    <h3 class="history-title">Sobre a nossa história</h3>
+    <h3 class="history-title" id="historia">Sobre a nossa história</h3>
 
     <p class="history-text">
       Nascemos sem a pretensão de nos tornar a maior ONG da região. Desde o início, nosso objetivo era claro: não
