--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -18,7 +18,7 @@
 
         <div class="hero-buttons">
           <button mat-raised-button color="primary" (click)="onDonateClick()">Doe Agora</button>
-          <button mat-stroked-button>Saiba Mais</button>
+          <button mat-stroked-button (click)="onKnowMoreClick()">Saiba Mais</button>
         </div>
       </div>
 
