--- a/src/app/pages/nos-apoie/nos-apoie.component.html
+++ b/src/app/pages/nos-apoie/nos-apoie.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <p class="pix-contact">
-          Para informações ou dúvidas, entre em contato pelo e-mail: <strong>contatoongseramor</strong>
+          Para informações ou dúvidas, entre em contato pelo e-mail: contatoongseramor&#64;gmail.com
         </p>
       </div>
     </div>
