--- a/src/app/shared/components/menu/menu.css
+++ b/src/app/shared/components/menu/menu.css
@@ -27,6 +27,7 @@
   border: none;
   padding: 0;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .brand-name {
@@ -67,10 +68,6 @@
   flex-wrap: wrap;
 }
 
-.menu-item {
-  display: inline;
-}
-
 .menu-link {
   font-family: Montserrat, sans-serif;
   font-weight: 600;
@@ -85,9 +82,11 @@
   cursor: pointer;
   position: relative;
   transition: color 0.3s ease;
+  text-decoration: none;
+  display: inline-block;
 }
 
-/* Underline animado no hover */
+/* Underline animado no hover e active */
 .menu-link::after {
   content: '';
   position: absolute;
@@ -99,15 +98,13 @@
   transition: width 0.4s ease;
 }
 
-.menu-link:hover::after {
+.menu-link:hover::after, .menu-link.active::after {
   width: 100%;
 }
 
-.menu-link:hover {
+.menu-link:hover, .menu-link.active {
   color: #e91e63;
 }
-
-
 
 .menu-toggle {
   display: none;
@@ -209,7 +206,7 @@
     display: none;
   }
 
-  .menu-link:hover {
+  .menu-link:hover, .menu-link.active {
     background-color: #f5f5f5;
     color: #e91e63;
   }
