feat: ajuste nomeclatura de componentes

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -61,11 +61,11 @@
       </div>
     </section>
 
-    <app-quem-somos></app-quem-somos>
-    <app-atividades></app-atividades>
-    <app-projetos></app-projetos>
-    <app-parceiros></app-parceiros>
-    <app-nos-apoie></app-nos-apoie>
+    <app-home-quem-somos></app-home-quem-somos>
+    <app-home-atividades></app-home-atividades>
+    <app-home-projetos></app-home-projetos>
+    <app-home-parceiros></app-home-parceiros>
+    <app-home-nos-apoie></app-home-nos-apoie>
   </main>
 
   <app-footer></app-footer>
