--- a/src/app/pages/projetos/projetos.component.css
+++ b/src/app/pages/projetos/projetos.component.css
@@ -25,6 +25,7 @@
 }
 
 .section-title {
+  font-family: Montserrat, sans-serif;
   font-size: 2.5rem;
   font-weight: 800;
   color: #333;
@@ -33,6 +34,7 @@
 }
 
 .subtitle {
+  font-family: Roboto, sans-serif;
   color: #666;
   font-size: 1.1rem;
   line-height: 1.8;
@@ -43,6 +45,7 @@
 }
 
 .year-title {
+  font-family: Montserrat, sans-serif;
   font-size: 2.2rem;
   font-weight: 700;
   color: #e91e63;
@@ -93,6 +96,7 @@
 }
 
 .project-info h3 {
+  font-family: Montserrat, sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
   color: #333;
@@ -100,6 +104,7 @@
 }
 
 .project-info p {
+  font-family: Roboto, sans-serif;
   color: #666;
   line-height: 1.6;
   font-size: 1rem;
