--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,19 @@
 	padding: 3rem 0rem;
 }
 
+html,
+body {
+	font-family: Roboto, sans-serif;
+	color: #333;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Montserrat, sans-serif;
+}
+
 
